--- a/WERP/WERP.csproj
+++ b/WERP/WERP.csproj
@@ -109,11 +109,27 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\ProdutosController.cs" />
+    <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ProdutoModel.cs" />
+    <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\Colaboradores\CidadeModel.cs" />
+    <Compile Include="Models\Colaboradores\DepartamentoModel.cs" />
+    <Compile Include="Models\Colaboradores\EnderecoModel.cs" />
+    <Compile Include="Models\Colaboradores\PessoaModel.cs" />
+    <Compile Include="Models\Colaboradores\PessoaFisicaModel.cs" />
+    <Compile Include="Models\Colaboradores\PessoaJuridicaModel.cs" />
+    <Compile Include="Models\Colaboradores\UFModel.cs" />
+    <Compile Include="Models\Produtos\CodigoModel.cs" />
+    <Compile Include="Models\Produtos\EstoqueModel.cs" />
+    <Compile Include="Models\Produtos\GrupoModel.cs" />
+    <Compile Include="Models\Produtos\InventarioModel.cs" />
+    <Compile Include="Models\Produtos\MarcaModel.cs" />
+    <Compile Include="Models\Produtos\PrecoModel.cs" />
+    <Compile Include="Models\Produtos\ProdutoModel.cs" />
+    <Compile Include="Models\Produtos\SubGrupoModel.cs" />
+    <Compile Include="Models\Produtos\TabelaModel.cs" />
     <Compile Include="Models\WERPContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -134,6 +150,11 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Scripts\jquery-2.0.2.min.map" />
+    <Content Include="Views\Produto\Index.cshtml" />
+    <Content Include="Views\Produto\Details.cshtml" />
+    <Content Include="Views\Produto\Create.cshtml" />
+    <Content Include="Views\Produto\Edit.cshtml" />
+    <Content Include="Views\Produto\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -143,21 +164,6 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Produtos\Index.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Produtos\Details.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Produtos\Create.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Produtos\Edit.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Produtos\Delete.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
