--- a/WERP/Web.config
+++ b/WERP/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="WERPContext" connectionString="Server=.\SQLEXPRESS; Database=WERP; MultipleActiveResultSets=True;Trusted_Connection=true;Password=vd001989; User Id=sa;"
+    <add name="WERPContext" connectionString="Server=.\SQLSERVER; Database=WERP; MultipleActiveResultSets=True;Trusted_Connection=true;Password=vd001989; User Id=sa;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
